Graphics update, added packs

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.0.2
+Date: 2025-02-10
+  Changes:
+    - Graphics update
+    - Added micromissile packs of 20 for ease of transport
+---------------------------------------------------------------------------------------------------
 Version: 0.0.1
 Date: 2025-02-10
   Changes:
