Fixes, locale, graphics

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,16 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.0
+Date: 2025-02-10
+  Changes:
+    - Public release
+---------------------------------------------------------------------------------------------------
+Version: 0.0.3
+Date: 2025-02-10
+  Changes:
+    - Another graphics update
+    - Locale update
+    - Fixes
+---------------------------------------------------------------------------------------------------
 Version: 0.0.2
 Date: 2025-02-10
   Changes:
