--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.0
+Date: 2025-02-11
+  Changes:
+    - Added arc missiles (Space Age only)
+---------------------------------------------------------------------------------------------------
 Version: 1.0.0
 Date: 2025-02-10
   Changes:
