--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.1
+Date: 2025-02-11
+  Changes:
+    - Nerfed arc missiles somewhat as the arcing was a bit excessive sometimes
+---------------------------------------------------------------------------------------------------
 Version: 1.1.0
 Date: 2025-02-11
   Changes:
