Added cheap mode for crafting

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.2.1
+Date: 2025-02-12
+  Changes:
+    - Added cheap crafting mode for advanced micromissiles
+    - Locale fix
+---------------------------------------------------------------------------------------------------
 Version: 1.2.0
 Date: 2025-02-11
   Changes:
