--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.2.2
+Date: 2025-02-12
+  Changes:
+    - Added Russian locale
+---------------------------------------------------------------------------------------------------
 Version: 1.2.1
 Date: 2025-02-12
   Changes:
