--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.2.4
+Date: 2025-02-17
+  Changes:
+    - Incendiary micromissiles for everyone!
+---------------------------------------------------------------------------------------------------
 Version: 1.2.3
 Date: 2025-02-13
   Changes:
