--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.3.0
+Date: 2025-02-17
+  Changes:
+    - Added swarm pack versions that fre 4 missiles at once
+    - MORE MISSILES
+---------------------------------------------------------------------------------------------------
 Version: 1.2.4
 Date: 2025-02-17
   Changes:
