--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,14 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.3.2
+Date: 2025-02-18
+  Changes:
+    - Removed debug messages I accidentally left
+---------------------------------------------------------------------------------------------------
+Version: 1.3.1
+Date: 2025-02-18
+  Changes:
+    - Swarm missiles now "fan out" when fired
+---------------------------------------------------------------------------------------------------
 Version: 1.3.0
 Date: 2025-02-17
   Changes:
