--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.3.3
+Date: 2025-02-20
+  Changes:
+    - Adjusted projectile max range
+---------------------------------------------------------------------------------------------------
 Version: 1.3.2
 Date: 2025-02-18
   Changes:
