--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.3.4
+Date: 2025-02-22
+  Changes:
+    - Fixed settings (they didn't do anything before)
+---------------------------------------------------------------------------------------------------
 Version: 1.3.3
 Date: 2025-02-20
   Changes:
