--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.3.7
+Date: 2025-03-17
+  Changes:
+    - Forgot the explosive one. Now included.
+---------------------------------------------------------------------------------------------------
 Version: 1.3.6
 Date: 2025-03-14
   Changes:
