--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.3.8
+Date: 2025-03-24
+  Changes:
+    - Fixed the icon size for mass rocketry 2
+---------------------------------------------------------------------------------------------------
 Version: 1.3.7
 Date: 2025-03-17
   Changes:
