--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.3.9
+Date: 2025-03-30
+  Changes:
+    - Fixed misspelled dependency
+---------------------------------------------------------------------------------------------------
 Version: 1.3.8
 Date: 2025-03-24
   Changes:
