--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.3.10
+Date: 2025-03-31
+  Changes:
+    - Added CN tranclation. (Thanks to https://github.com/Houraiji-Kyuusyou)
+---------------------------------------------------------------------------------------------------
 Version: 1.3.9
 Date: 2025-03-30
   Changes:
