--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.3.11
+Date: 2025-04-01
+  Changes:
+    - Fixed a crash if space age is not installed
+---------------------------------------------------------------------------------------------------
 Version: 1.3.10
 Date: 2025-03-31
   Changes:
