Artillery Missile packs

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.4.0
+Date: 2025-04-08
+  Changes:
+    - Added Artillery Missile packs - you can have rocket artillery now!
+---------------------------------------------------------------------------------------------------
 Version: 1.3.11
 Date: 2025-04-01
   Changes:
