--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.4.1
+Date: 2025-04-09
+  Changes:
+    - Updated CN tranclation. (Thanks to https://github.com/Houraiji-Kyuusyou)
+---------------------------------------------------------------------------------------------------
 Version: 1.4.0
 Date: 2025-04-08
   Changes:
