Technology bug fix

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.4.2
+Date: 2025-06-10
+  Changes:
+    - Fixed a crash because of badly defined technology
+---------------------------------------------------------------------------------------------------
 Version: 1.4.1
 Date: 2025-04-09
   Changes:
